# Endic

./: Cargo.toml  README.md
src/: args.rs  config.rs  database_utils.rs  main.rs  printer.rs  search.rs
