[package]
name = "endic_with_dnld"
version = "1.0.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.23", features = ["blocking"] }
bytes = "1.5.0"
csv = "1.3.0"
colored = "2.1.0"
ansi_term = "0.12.1"
indexmap = "2.7.0"
