[package]
name = "endic"
version = "1.2.0"
edition = "2021"
description = "simple English explanatory dictionary in command line"
license = "MIT"
documentation = "https://github.com/kamildemocko/EndicWithDownload"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
csv = "1.3.0"
colored = "2.1.0"
ansi_term = "0.12.1"
indexmap = "2.7.0"
anyhow = "1.0.97"
ureq = "3.0.8"
